<resources>
    <string name="app_name">GetPeople</string>
    <string name="selamat_datang">Selamat datang di GetPeople</string>
    <string name="button_masuk">Masuk</string>
    <string name="button_daftar">Daftar</string>
    <string name="signup_title">Daftar Sebagai Pengguna</string>
    <string name="hint_name">Nama</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="login_title">Masuk aplikasi</string>
    <string name="title_activity_maps">Peta Bencana</string>
    <string name="keluar">Keluar</string>
    <string name="cari_korban_title">Banjir Bandang</string>
    <string name="cari_korban_subtitle">DKI Jakarta</string>
    <string name="button_kirim">Kirim</string>
    <string name="button_unggah">Unggah</string>
    <string name="daftar_korban_title">Banjir Bandang, DKI Jakarta</string>
    <string name="button_ambil">Ambil</string>
    <string name="hint_nama">Nama Lengkap</string>
    <string name="hint_lokasi">Lokasi Pengungsian</string>
    <string name="hint_tanggal_lahir">Tanggal Lahir</string>
    <string name="hint_nik">Nomor Induk Kependudukan</string>
    <string name="hint_ibu">Nama Ibu Kandung</string>
    <string name="desc_korban">Foto Korban</string>
    <string name="daftar_korban_subtitle">Berikut hasil yang paling sesuai</string>
    <string name="menu_tambah_korban">Tambah Korban</string>
    <string name="peta_bencana">Peta Bencana</string>
    <string name="ambil_foto">Ambil Foto</string>
    <string name="pilih_gambar">Pilih gambar...</string>
    <string name="izin_tidak_diberikan">Izin tidak diberikan</string>
    <string name="menu_cari_korban">Cari Korban</string>
    <string name="daftar_sebagai">Daftar sebagai...</string>
    <string name="pengguna">Pengguna</string>
    <string name="petugas">Petugas</string>
    <string name="signup_title_petugas">Daftar sebagai petugas</string>
    <string name="hint_id">ID Petugas</string>
    <string name="berhasil">Berhasil!</string>
    <string name="gagal">Gagal!</string>
    <string name="lanjut">Lanjut</string>
    <string name="tutup">Tutup</string>
    <string name="jangan_kosong">Tidak boleh kosong!</string>
    <string name="min_enam">Minimal panjang 6 karakter</string>
    <string name="email_tidak_valid">Email tidak valid</string>
    <string name="button_cari">Cari</string>
    <string name="belum_ada_gambar">Masukkan gambar terlebih dahulu!</string>
    <string name="hint_kontak">Kontak</string>
    <string name="hint_gender">Jenis Kelamin</string>
    <string name="hint_tempat_lahir">Tempat Lahir</string>
    <string name="mencari">Mencari...</string>
    <string name="hint_loading">Loading</string>
    <string name="welcome_subtitle">Aplikasi yang dapat membantumu mencari orang dan keluarga terdekat di lokasi bencana. Daftar atau masuk untuk memulai!</string>
    <string name="hint_gambar_daftar">Gambar Daftar</string>
    <string name="getpeople">GetPeople</string>
    <string name="tombol_tambah_korban">Tombol Tambah Korban</string>
    <string name="menu_daftar_korban">Daftar Korban</string>
    <string name="menu_detail_korban">Detail Korban</string>
    <string-array name="gender">
        <item>Laki-Laki</item>
        <item>Perempuan</item>
    </string-array>
</resources>